--- a/src/Page.css
+++ b/src/Page.css
@@ -2,7 +2,7 @@
   position: absolute;
   left: 5.33%;
   right: 60.18%;
-  top: 15.75%;
+  top: 12.75%;
   bottom: 72.95%;
 
   font-family: "Montserrat";
@@ -22,7 +22,7 @@
   width: 613px;
   height: 268px;
   left: 80px;
-  top: 226px;
+  top: 218px;
 
   background: #ffffff;
   border-radius: 20px;
@@ -32,7 +32,7 @@
   position: absolute;
   left: 12.33%;
   right: 86.04%;
-  top: 24.71%;
+  top: 21.71%;
   bottom: 67.29%;
 
   font-family: "Montserrat";
@@ -49,7 +49,7 @@
   width: 10px;
   height: 10px;
   left: 122px;
-  top: 140px;
+  top: 136px;
 
   /* border: 2px solid #8ccd47; */
   box-sizing: border-box;
@@ -59,7 +59,7 @@
   position: absolute;
   left: 20.18%;
   right: 65.18%;
-  top: 26.39%;
+  top: 22.95%;
   bottom: 67.77%;
 
   font-family: "Montserrat";
@@ -77,7 +77,7 @@
   width: 120px;
   height: 40px;
   left: 12.08%;
-  top: 13.8%;
+  top: 12.8%;
 
   font-family: "Montserrat";
   font-style: normal;
@@ -103,4 +103,177 @@
   /* identical to box height, or 22px */
 
   color: #5f5f5f;
+}
+
+.floor {
+  position: absolute;
+  width: 58px;
+  height: 17px;
+  left: 375px;
+  top: 540px;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+
+  color: #3c3b3a;
+}
+
+.heat {
+  position: absolute;
+  width: 187px;
+  height: 40px;
+  left: 12.08%;
+  top: 60%;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 120.4%;
+  /* or 22px */
+
+  color: #5f5f5f;
+}
+.toggle {
+  background: #f6f6f6;
+  /* Gray/02 */
+
+  border: 1px solid #e8e8e8;
+  box-sizing: border-box;
+  border-radius: 100px;
+}
+
+.usage {
+  position: absolute;
+  width: 499px;
+  height: 200px;
+  left: 790px;
+  top: 55px;
+
+  background: linear-gradient(180deg, #232526 0%, #6a6e73 100%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 20px 20px;
+}
+.box3 {
+  position: absolute;
+  left: 72.65%;
+  right: 8.03%;
+  top: 15.92%;
+  bottom: 20.11%;
+
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+
+  border: "1px solid white";
+}
+
+.box2 {
+  position: absolute;
+  left: 45.65%;
+  right: 38.03%;
+  top: 30.92%;
+  bottom: 20.11%;
+
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+
+  border: "1px solid white";
+}
+.box1 {
+  position: absolute;
+  left: 15.65%;
+  right: 67.03%;
+  top: 30.92%;
+  bottom: 20.11%;
+
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+
+  border: "1px solid white";
+}
+.usagetext {
+  position: absolute;
+  left: 8.58%;
+  right: 65.18%;
+  top: 7.79%;
+  bottom: 84.38%;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 29px;
+  text-align: center;
+
+  color: #f2f2f2;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.tempdisplay {
+  position: absolute;
+  left: 33.86%;
+  right: 40.48%;
+  top: 14.63%;
+  bottom: 42.54%;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 44px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #f3f3f3;
+}
+.timedisplay {
+  position: absolute;
+  left: 33.86%;
+  right: 3.57%;
+  top: 68.66%;
+  bottom: 9.7%;
+
+  font-family: Overpass;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 28px;
+
+  color: #ffffff;
+
+  /* text shadow normal */
+
+  text-shadow: -2px 3px 1px rgba(0, 0, 0, 0.1);
+}
+.crowd {
+  position: absolute;
+  width: 485px;
+  height: 200px;
+  left: 5px;
+  top: 200px;
+
+  background: linear-gradient(180deg, #f8b500 0%, #ffe49e 100%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 20px 20px;
+}
+.crowdtext {
+  position: absolute;
+  left: 8.58%;
+  right: 65.18%;
+  top: 7.79%;
+  bottom: 84.38%;
+
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 29px;
+  text-align: center;
+
+  color: #f2f2f2;
 }
